--- a/views/personnages.mustache
+++ b/views/personnages.mustache
@@ -10,7 +10,10 @@
     <ul>
         {{#personnages}}
             <li>{{nom}} - {{description}}</li>
+            <a href="../personnages/details/{{id}}">Détails</a>
+            <img src="/img/{{photo}}" alt="description"/>
         {{/personnages}}
     </ul>
+    
 </body>
 </html>
